--- a/assets/CSS/root.css
+++ b/assets/CSS/root.css
@@ -2,12 +2,12 @@
 
 @font-face {
     font-family: 'TitlingGothicFB Cond';
-    src: url(../fonts/TitlingGothicFB\ Cond\ Bold.otf);
+    src: url(../fonts/TitlingGothicFB_Cond_Bold.otf);
 }
 
 @font-face {
     font-family: 'Acumin Pro';
-    src: url(../fonts/Acumin\ Pro\ SemiCond\ Light.otf);
+    src: url(../fonts/FontsFree-Net-Acumin-Pro-Book.ttf);
 }
 
 /* <---------------------------------------------------- universal Selector --------------------------------------------------------> */
@@ -29,11 +29,12 @@
 
     --color-white: #FFFFFF;
     --black-color: #000000;
-    --nav-tele-logo-clr: linear-gradient(90deg, #2AABEE 0%, #229ED9 99.93%);
-    --hero-sec-text-clr: #FC9800;
-    --slick-dot-color: #BABABA;
-    --scrollbar-thumb-clr: #ff9933;
-    --track-clr: #f1f1f1;
+    --orange-clr: #FA6A00;
+    --text-light-clr: #636363;
+    --drop-shadow: #FA6A0099;
+    --hover-drop-shadow: rgba(250, 106, 0, .6);
+    --pro-box-clr: #E3FAFF0D;
+    --text-clr: #101A2E;
 
     /* font-family */
 
@@ -97,6 +98,7 @@
     --fs-72: 72px;
     --fs-79: 79px;
     --fs-80: 80px;
+    --fs-96: 96px;
     --fs-100: 100px;
     --fs-108: 108px;
     --fs-157: 157px;
@@ -146,6 +148,7 @@
     --lh-90: 90px;
     --lh-96: 96px;
     --lh-100: 100px;
+    --lh-115: 115px;
     --lh-130: 130px;
     --lh-188: 188px;
 
@@ -168,16 +171,8 @@
     padding-right: 12px;
 }
 
-.container-about-us {
-    max-width: 1298px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 12px;
-    padding-right: 12px;
-}
-
-.container_diff_hero {
-    max-width: 1124px;
+.container-navBar {
+    max-width: 1230px;
     margin-left: auto;
     margin-right: auto;
     padding-left: 12px;
@@ -281,6 +276,10 @@
 
 .fs-80 {
     font-size: var(--fs-80);
+}
+
+.fs-96 {
+    font-size: var(--fs-96);
 }
 
 .fs-18 {
@@ -455,6 +454,10 @@
     line-height: var(--lh-110);
 }
 
+.lh-115 {
+    line-height: var(--lh-115);
+}
+
 .lh-120 {
     line-height: var(--lh-120);
 }
@@ -588,4 +591,254 @@ a {
     opacity: 70%;
 }
 
+.opacity-90 {
+    opacity: 90%;
+}
+
 /* Media Queries */
+
+@media (min-width: 1200px) {
+    .move {
+        animation: none;
+        margin: 0;
+        width: 100%;
+    }
+}
+
+@media (max-width: 1200px) {
+    .pos-dry-ice-blast {
+        max-width: 500px !important;
+    }
+
+    .pos-dry-ice-blast-2 {
+        max-width: 500px !important;
+    }
+}
+
+@media (max-width: 1400px) {
+    .pos-dry-ice-blast {
+        max-width: 640px;
+    }
+
+    .pos-dry-ice-blast-2 {
+        max-width: 580px;
+        width: auto;
+    }
+}
+
+@media (max-width: 991.9px) {
+    .head-text-media {
+        font-size: var(--fs-61);
+        line-height: var(--lh-71);
+    }
+
+    .py-blast-col-2 {
+        padding-top: 48px;
+        padding-bottom: 40px;
+    }
+
+    .ps-lg-media {
+        padding-left: 12px;
+    }
+
+    .py-header {
+        padding-bottom: 100px;
+    }
+
+    .min-h-max-lg {
+        min-height: auto;
+    }
+
+    .max-w-about-us-cont {
+        max-width: 768px;
+    }
+
+    .d-max-lg-none {
+        display: none;
+    }
+
+    .my-media-lg {
+        margin-top: 40px;
+        margin-bottom: 40px;
+    }
+
+    .w-h-about-img {
+        width: 100%;
+        height: 100%;
+    }
+
+    .max-lg-w {
+        width: 100%;
+    }
+
+    .pos-dry-ice-blast {
+        right: -15px;
+        top: 0;
+        height: auto;
+        position: relative;
+    }
+
+    .py-blast-col {
+        padding-bottom: 40px;
+        padding-top: 40px;
+    }
+
+    .pos-dry-ice-blast-2 {
+        left: -15px;
+        height: auto;
+        bottom: 0;
+        position: relative;
+    }
+
+    .d-max-lg-prop-blast {
+        display: flex;
+        justify-content: end;
+    }
+
+    .max-w-blasting {
+        max-width: 768px;
+    }
+}
+
+@media (max-width: 767.9px) {
+    .menuicon {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-direction: column;
+        width: 50px;
+        height: 30px;
+        position: relative;
+        z-index: 11;
+        cursor: pointer;
+    }
+
+    .menuicon span:nth-child(1) {
+        background: var(--orange-clr);
+        width: 70%;
+        height: 4px;
+        transition: all 300ms linear;
+    }
+
+    .menuicon span:nth-child(2) {
+        background: var(--orange-clr);
+        width: 100%;
+        height: 4px;
+        transition: all 300ms linear;
+    }
+
+    .menuicon span:nth-child(3) {
+        background: var(--orange-clr);
+        width: 70%;
+        height: 4px;
+        transition: all 300ms linear;
+    }
+
+    .menuicon:hover span:nth-child(1) {
+        width: 100%;
+    }
+
+    .menuicon:hover span:nth-child(2) {
+        width: 70%;
+    }
+
+    .menuicon:hover span:nth-child(3) {
+        width: 100%;
+    }
+
+    .max-lg-view {
+        position: fixed;
+        height: 100%;
+        width: 100%;
+        top: 0;
+        left: -100%;
+        background: var(--color-white);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        z-index: 10;
+        transition: all 300ms linear;
+    }
+
+    .show {
+        left: 0;
+    }
+
+    .d_max_md_none {
+        display: none !important;
+    }
+
+    .navBar-changes {
+        padding-left: 24px;
+        padding-right: 24px;
+    }
+
+    .d-max-md-block {
+        display: block;
+    }
+
+    .sub-text-media {
+        font-size: var(--fs-18);
+        line-height: var(--lh-24);
+    }
+
+    .pe-max-md {
+        padding-right: 34px;
+    }
+
+    .prop-box {
+        padding: 17px 14px;
+        max-width: 326px;
+        margin-top: 80px;
+    }
+
+    .pt-hero {
+        padding-top: 76px;
+    }
+
+    .max-w-about-us-cont {
+        max-width: 576px;
+    }
+
+    .my-media-lg {
+        margin-top: 24px;
+        margin-bottom: 24px;
+    }
+
+    .my-media-btm-text {
+        margin-top: 40px;
+        margin-bottom: 16px;
+    }
+
+    .main-heading-media {
+        font-size: var(--fs-36);
+        line-height: var(--lh-150);
+    }
+}
+
+@media (max-width: 576px) {
+    .navBar-changes {
+        padding-left: 24px;
+        padding-right: 24px;
+    }
+
+    .head-text-media {
+        font-size: var(--fs-43);
+        line-height: var(--lh-54);
+    }
+
+    .sub-text-media {
+        font-size: var(--fs-16);
+        line-height: var(--lh-24);
+    }
+
+    .py-header {
+        padding-bottom: 60px;
+    }
+
+    .main-heading-media {
+        font-size: var(--fs-30);
+        line-height: var(--lh-150);
+    }
+}
