--- a/assets/CSS/root.css
+++ b/assets/CSS/root.css
@@ -35,6 +35,7 @@
     --hover-drop-shadow: rgba(250, 106, 0, .6);
     --pro-box-clr: #E3FAFF0D;
     --text-clr: #101A2E;
+    --brdr-light-white: #FFFFFF80;
 
     /* font-family */
 
@@ -632,6 +633,10 @@ a {
         line-height: var(--lh-71);
     }
 
+    .max-w-choose-sec {
+        max-width: 768px;
+    }
+
     .py-blast-col-2 {
         padding-top: 48px;
         padding-bottom: 40px;
@@ -815,12 +820,24 @@ a {
         font-size: var(--fs-36);
         line-height: var(--lh-150);
     }
+
+    .w-h-change-cloud {
+        height: 100px;
+    }
+
+    .w-h-change-cloud-2 {
+        height: 100px;
+    }
 }
 
 @media (max-width: 576px) {
     .navBar-changes {
         padding-left: 24px;
         padding-right: 24px;
+    }
+
+    .c-compare::after {
+        height: 320px;
     }
 
     .head-text-media {
