--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -242,3 +242,149 @@
 
 /* slider */
 
+.c-compare {
+    --h: 9;
+    --m: 1rem 0;
+    --w: 16;
+    --thumb-bgc: white;
+    --thumb-bgc-focus: hsla(0, 70%, 70%, 0.7);
+    --thumb-w: 5px;
+
+    margin: var(--m);
+    position: relative;
+}
+
+.c-compare::after {
+    content: "";
+    display: block;
+    padding-bottom: calc((var(--h) / var(--w)) * 100%);
+    height: 492px;
+    width: 558px;
+}
+
+.c-compare__left,
+.c-compare__right {
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    width: 100%;
+}
+
+.c-compare__left {
+    clip-path: polygon(0% 0%, var(--value) 0%, var(--value) 100%, 0% 100%);
+}
+
+.c-compare__right {
+    clip-path: polygon(100% 0%, var(--value) 0%, var(--value) 100%, 100% 100%);
+}
+
+.c-compare__range {
+    background-color: transparent;
+    box-sizing: border-box;
+    font-family: inherit;
+    height: 100%;
+    margin: 0;
+    outline: none;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+
+.c-compare__range::-moz-range-thumb {
+    background-color: var(--thumb-bgc);
+    cursor: ew-resize;
+    height: 100%;
+    width: var(--thumb-w);
+}
+
+.c-compare__range::-webkit-slider-thumb {
+    background-color: var(--thumb-bgc);
+    cursor: ew-resize;
+    height: 100%;
+    width: var(--thumb-w);
+    position: relative;
+}
+
+.c-compare__range:focus::-webkit-slider-thumb {
+    background-color: var(--thumb-bgc-focus);
+    box-shadow: 0 0 0 3px var(--thumb-bgc);
+}
+
+.c-compare__range:focus::-moz-range-thumb {
+    background-color: var(--thumb-bgc-focus);
+    box-shadow: 0 0 0 3px var(--thumb-bgc);
+}
+
+.c-compare__range::-moz-range-track {
+    background: transparent;
+    background-size: 100%;
+    box-sizing: border-box;
+}
+
+.c-compare__range::-webkit-slider-runnable-track {
+    background: transparent;
+    background-size: 100%;
+    box-sizing: border-box;
+    height: 100%;
+}
+
+.c-compare__range,
+.c-compare__range::-webkit-slider-runnable-track,
+.c-compare__range::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+}
+
+
+/* why choose us Section */
+
+.bg-about-clr-bts {
+    background: var(--text-clr);
+}
+
+
+/* Behind the scene Section */
+
+/* .bg-bts {
+    background: var(--text-clr);
+} */
+.bg-bts {
+    background-image: url("../Images/PNG/bts-back-img.png");
+    background-size: 100% 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.max-w-bts-main-text {
+    max-width: 498px;
+}
+
+.max-w-bts-sub-text {
+    max-width: 592px;
+}
+
+.h-bts-sec {
+    min-height: 100vh;
+}
+
+.w-h-bts-img {
+    height: 642px;
+}
+
+.brdr-img-bts {
+    border: 4px solid var(--brdr-light-white);
+}
+
+.my-media-video-bts {
+    margin-top: 12px;
+    margin-bottom: 50px;
+}
+
+.my-bottom-text-bts {
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+
+.mb-media-btn-bts {
+    margin-bottom: 34px;
+}
