--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -644,6 +644,11 @@
     border-radius: 16px;
     box-shadow: 0px 0px 12px 0px #0000001A;
     background: var(--color-white);
+    transition: all 300ms linear;
+}
+
+.insight-box:hover {
+    box-shadow: 0 0 12px rgba(250, 106, 0, .6);
 }
 
 .my-media-insight-box-text {
