--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -456,7 +456,7 @@
     top: 0;
     left: 0;
     border-radius: 24px;
-    border: 3px solid #FA6A00;
+    border: 3px solid #D49E14;
 }
 
 .swiper {
@@ -475,9 +475,6 @@
     filter: none;
 }
 
-.gallery-slide.swiper-slide-active {
-    border: 3px solid #FA6A00 !important;
-}
 
 .gallery-slide.swiper-slide-active::after {
     background: transparent !important;
