complete the page with correcting some mistakes

--- a/assets/CSS/root.css
+++ b/assets/CSS/root.css
@@ -954,6 +954,10 @@ a {
         cursor: pointer;
     }
 
+    .swiper-3d {
+        perspective: 1360px !important;
+    }
+
     .mail-list-box {
         border-radius: 16px;
     }
